Fix display of icons referenced from non `icon-` styles  - replace direct usages of character codepoint with variables  - fix $font-icon variable value and use it everywhere we set the icon font-family  - Adjust margin-top on .flash__message .flash--error because the warning icon was appearing too high with new icon set  - Set visited color on flash message dismiss button so it doesn't change color once it has been "visited"

--- a/app/assets/stylesheets/atoms/_icons.scss
+++ b/app/assets/stylesheets/atoms/_icons.scss
@@ -65,7 +65,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'Material Icons' !important;
+  font-family: $font-icon;
   speak: none;
   font-style: normal;
   font-weight: normal;
