--- a/app/assets/stylesheets/atoms/_variables.scss
+++ b/app/assets/stylesheets/atoms/_variables.scss
@@ -16,7 +16,7 @@ $font-system:         	-apple-system, BlinkMacSystemFont,
                         "Fira Sans", "Droid Sans", "Helvetica Neue",
                         sans-serif;
 
-$font-icon:           	'MaterialIcons-Regular';
+$font-icon:           	'Material Icons' !important;;
 
 
 // Typopgraphy
