--- a/app/assets/stylesheets/molecules/_flashes.scss
+++ b/app/assets/stylesheets/molecules/_flashes.scss
@@ -46,7 +46,7 @@
   color: $color-red;
   border-color: $color-red;
   .flash__message:before {
-    content: "\e002";
+    content: map_get($icons, warning);
   }
   .flash__dismiss {
     border-color: $color-red;
@@ -65,7 +65,6 @@
     display: inline-block;
     font-family: $font-icon;
     margin-right: .5em;
-    margin-top: .1em;
   }
 }
 
@@ -84,5 +83,8 @@
   border-bottom-right-radius: $border-radius-large;
   &:hover {
     background-color: $color-green-light;
+  }
+  &:visited {
+    color: $color-grey-darkest;
   }
 }
