--- a/app/assets/stylesheets/molecules/_reveal.scss
+++ b/app/assets/stylesheets/molecules/_reveal.scss
@@ -13,7 +13,7 @@
     position: relative;
     top: .1em;
     font-family: $font-icon;
-    content: '\a0\e313';
+    content: '\a0'+map_get($icons, keyboard_arrow_down);
   }
 }
 
@@ -34,7 +34,7 @@
   &.is-hidden {
     .reveal__link {
       &:after {
-        content: '\a0\e315';
+        content: '\a0'+map_get($icons, keyboard_arrow_right);
       }
     }
     .reveal__content {
